# bluemoon_ai

./: .gitignore  AUTHORS  CMakeLists.txt  ChangeLog  Makefile.am  Makefile.in  README  README.md  aclocal.m4  bluemoon.h  bluemoon_main.cpp  condition.c  config.h.in  configure  configure.in  do_matchup  dumpnet.c  engine.c  gui.c  init.c  learner.c
image/: Makefile.am  Makefile.in
m4/: ChangeLog
networks/: Makefile.am  Makefile.in
po/: ChangeLog  Makevars  POTFILES.in  bluemoon.pot  de.gmo  de.po
