#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.61)
AC_INIT([bluemoon], [1.3.2], [keldon@keldon.net])
AC_CONFIG_SRCDIR([ai.c])
AC_CONFIG_HEADER(config.h)

AM_INIT_AUTOMAKE([1.9])

# Checks for programs.
AC_PROG_CC

# Checks for libraries.
AC_CHECK_LIB([m], [exp])
AM_GNU_GETTEXT([external])

# Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS([libintl.h locale.h stdlib.h string.h unistd.h])

# Check for GTK 2.12
AM_PATH_GTK_2_0(2.12.0)

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.
AC_FUNC_MALLOC
AC_FUNC_MEMCMP
AC_CHECK_FUNCS([memset setlocale strcasecmp strdup strtol])

AC_CONFIG_FILES([Makefile image/Makefile networks/Makefile po/Makefile.in])
AC_OUTPUT
