imagedir = $(pkgdatadir)/image

image_DATA = \
aqua00.jpg \
aqua01.jpg \
aqua02.jpg \
aqua03.jpg \
aqua04.jpg \
aqua05.jpg \
aqua06.jpg \
aqua07.jpg \
aqua08.jpg \
aqua09.jpg \
aqua10.jpg \
aqua11.jpg \
aqua12.jpg \
aqua13.jpg \
aqua14.jpg \
aqua16.jpg \
aqua17.jpg \
aqua18.jpg \
aqua19.jpg \
aqua20.jpg \
aqua21.jpg \
aqua22.jpg \
aqua23.jpg \
aqua24.jpg \
aqua25.jpg \
aqua26.jpg \
aqua28.jpg \
aqua29.jpg \
aqua30.jpg \
aqua31.jpg \
buka00.jpg \
buka01.jpg \
buka02.jpg \
buka03.jpg \
buka04.jpg \
buka05.jpg \
buka06.jpg \
buka07.jpg \
buka08.jpg \
buka09.jpg \
buka10.jpg \
buka11.jpg \
buka12.jpg \
buka13.jpg \
buka14.jpg \
buka15.jpg \
buka16.jpg \
buka17.jpg \
buka18.jpg \
buka19.jpg \
buka20.jpg \
buka21.jpg \
buka22.jpg \
buka23.jpg \
buka24.jpg \
buka25.jpg \
buka26.jpg \
buka27.jpg \
buka28.jpg \
buka29.jpg \
buka30.jpg \
cardback.jpg \
flit00.jpg \
flit01.jpg \
flit02.jpg \
flit03.jpg \
flit04.jpg \
flit05.jpg \
flit06.jpg \
flit07.jpg \
flit08.jpg \
flit09.jpg \
flit10.jpg \
flit11.jpg \
flit12.jpg \
flit13.jpg \
flit14.jpg \
flit15.jpg \
flit16.jpg \
flit17.jpg \
flit18.jpg \
flit19.jpg \
flit20.jpg \
flit22.jpg \
flit23.jpg \
flit24.jpg \
flit25.jpg \
flit26.jpg \
flit27.jpg \
flit29.jpg \
flit30.jpg \
flit31.jpg \
hoax00.jpg \
hoax01.jpg \
hoax02.jpg \
hoax03.jpg \
hoax04.jpg \
hoax05.jpg \
hoax06.jpg \
hoax07.jpg \
hoax08.jpg \
hoax09.jpg \
hoax10.jpg \
hoax11.jpg \
hoax12.jpg \
hoax13.jpg \
hoax14.jpg \
hoax15.jpg \
hoax16.jpg \
hoax17.jpg \
hoax18.jpg \
hoax19.jpg \
hoax20.jpg \
hoax21.jpg \
hoax22.jpg \
hoax23.jpg \
hoax24.jpg \
hoax25.jpg \
hoax26.jpg \
hoax27.jpg \
hoax28.jpg \
hoax29.jpg \
khind00.jpg \
khind01.jpg \
khind02.jpg \
khind03.jpg \
khind04.jpg \
khind05.jpg \
khind06.jpg \
khind07.jpg \
khind08.jpg \
khind09.jpg \
khind10.jpg \
khind11.jpg \
khind12.jpg \
khind13.jpg \
khind14.jpg \
khind15.jpg \
khind16.jpg \
khind17.jpg \
khind18.jpg \
khind19.jpg \
khind20.jpg \
khind21.jpg \
khind22.jpg \
khind25.jpg \
khind26.jpg \
khind27.jpg \
khind28.jpg \
khind29.jpg \
khind30.jpg \
khind31.jpg \
mimix00.jpg \
mimix03.jpg \
mimix04.jpg \
mimix05.jpg \
mimix06.jpg \
mimix07.jpg \
mimix08.jpg \
mimix09.jpg \
mimix10.jpg \
mimix11.jpg \
mimix12.jpg \
mimix13.jpg \
mimix14.jpg \
mimix15.jpg \
mimix16.jpg \
mimix17.jpg \
mimix18.jpg \
mimix19.jpg \
mimix20.jpg \
mimix21.jpg \
mimix22.jpg \
mimix23.jpg \
mimix24.jpg \
mimix25.jpg \
mimix26.jpg \
mimix27.jpg \
mimix28.jpg \
mimix29.jpg \
mimix30.jpg \
mimix31.jpg \
mutant101.jpg \
mutant102.jpg \
mutant103.jpg \
mutant104.jpg \
mutant105.jpg \
mutant106.jpg \
mutant107.jpg \
mutant109.jpg \
pillar00.jpg \
pillar01.jpg \
pillar02.jpg \
pillar03.jpg \
pillar04.jpg \
pillar05.jpg \
pillar06.jpg \
pillar07.jpg \
pillar08.jpg \
pillar09.jpg \
pillar10.jpg \
pillar11.jpg \
pillar12.jpg \
pillar13.jpg \
pillar14.jpg \
pillar15.jpg \
pillar16.jpg \
pillar17.jpg \
pillar18.jpg \
pillar19.jpg \
pillar21.jpg \
pillar22.jpg \
pillar23.jpg \
pillar24.jpg \
pillar25.jpg \
pillar26.jpg \
pillar27.jpg \
pillar28.jpg \
pillar29.jpg \
pillar30.jpg \
terrah00.jpg \
terrah01.jpg \
terrah02.jpg \
terrah03.jpg \
terrah04.jpg \
terrah05.jpg \
terrah06.jpg \
terrah07.jpg \
terrah08.jpg \
terrah09.jpg \
terrah10.jpg \
terrah11.jpg \
terrah12.jpg \
terrah13.jpg \
terrah14.jpg \
terrah15.jpg \
terrah16.jpg \
terrah17.jpg \
terrah18.jpg \
terrah19.jpg \
terrah20.jpg \
terrah21.jpg \
terrah22.jpg \
terrah23.jpg \
terrah24.jpg \
terrah25.jpg \
terrah26.jpg \
terrah27.jpg \
terrah29.jpg \
terrah30.jpg \
vulca00.jpg \
vulca01.jpg \
vulca02.jpg \
vulca03.jpg \
vulca04.jpg \
vulca05.jpg \
vulca06.jpg \
vulca07.jpg \
vulca08.jpg \
vulca09.jpg \
vulca10.jpg \
vulca11.jpg \
vulca12.jpg \
vulca13.jpg \
vulca14.jpg \
vulca15.jpg \
vulca16.jpg \
vulca18.jpg \
vulca19.jpg \
vulca20.jpg \
vulca21.jpg \
vulca22.jpg \
vulca23.jpg \
vulca24.jpg \
vulca25.jpg \
vulca26.jpg \
vulca27.jpg \
vulca28.jpg \
vulca29.jpg \
vulca30.jpg

EXTRA_DIST = $(image_DATA)
